--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>[Your Name] - Portfolio</title>
+  <title>Akshaj Nadimpalli - Portfolio</title>
 
   <!-- Meta tags for responsiveness -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -192,7 +192,7 @@
     <h2>About Me</h2>
     <div class="about-content">
       <p>
-        Hello! I'm <strong>[Your Name]</strong>, a passionate student and researcher fascinated 
+        Hello! I'm <strong>Akshaj Nadimpalli</strong>, a passionate student and researcher fascinated 
         by the <em>interdisciplinary applications of machine learning</em> and the 
         <em>intersection of mathematics and ML</em>. My academic interests include applying 
         advanced computational techniques to solve real-world problems in fields ranging from 
