--- a/index.html
+++ b/index.html
@@ -250,14 +250,14 @@
       </p>
       <p>
         <strong>Paper Link:</strong> 
-        <a href="https://example.com/swarm-intel-paper" target="_blank">
+        <a href="Adaptive_Collective_Strategies_for_Swarm_Intelligence_Applications.pdf" target="_blank">
           Swarm Intelligence Paper
         </a>
       </p>
       <p>
         <strong>GitHub Repo:</strong> 
-        <a href="https://github.com/example/swarm-intelligence" target="_blank">
-          https://github.com/example/swarm-intelligence
+        <a href="https://github.com/akshajnad/SwarmIntelligenceModel" target="_blank">
+          https://github.com/akshajnad/SwarmIntelligenceModel
         </a>
       </p>
     </div>
