--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <h2>About Me</h2>
     <div class="about-content">
       <p>
-        Hello! I'm <strong>Akshaj Nadimpalli</strong>, a passionate student and researcher fascinated 
+        Hello! I'm <strong>Akshaj Nadimpalli</strong>, a passionate high school student fascinated 
         by the <em>interdisciplinary applications of machine learning</em> and the 
         <em>intersection of mathematics and ML</em>. My academic interests include applying 
         advanced computational techniques to solve real-world problems in fields ranging from 
@@ -205,7 +205,7 @@
         solutions for everyday challenges, and collaborating with like-minded individuals 
         on <em>innovative, impact-driven projects</em>. In my free time, I indulge in
         reading about computational math breakthroughs, tinkering with open-source code, 
-        and engaging in outdoor activities.
+        playing tennis, practicing the violin, and hiking.
       </p>
     </div>
   </section>
