--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 
     <!-- VERDANT (GARDEN APP) -->
     <div class="project">
-      <h3>Verdant - Prouce for All</h3>
+      <h3>Verdant - Produce for All</h3>
       <p>
         Verdant connects community gardens to shelters in need, helping them plan, plant, and harvest produce efficiently. Shelters can submit requests through the platform, which uses machine learning to determine a planting schedule that we as volunteers can follow to provide as much as possible. I built Verdant around a neural network architecture designed to forecast planting schedules and expected produce yields. Specifically, I fine-tuned a pretrained LSTM-based model (originally from Keras/TensorFlow’s time-series forecasting repository) using historical weather data (e.g., from local NOAA data feeds), soil-condition metrics, and past yield logs collected from regional community gardens. The neural network’s core layers comprise several LSTM blocks for sequence modeling and a final dense layer to output precise harvest predictions. This training process enabled Verdant to factor in weather fluctuations, seasonal soil dynamics, and historical donation patterns. By integrating these data-driven forecasts into a user-friendly web interface, the app empowers local gardeners to plan crop rotations more accurately, minimize waste, and optimize produce donations to nearby food banks.
       </p>
