--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
       </p>
       <p>
         <strong>GitHub Repo:</strong> 
-        <a href="https://github.com/akshajnad/CSEF" target="_blank">
+        <a href="https://github.com/akshajnad/T.O.A.S.T-CSEF" target="_blank">
           https://github.com/akshajnad/CSEF
         </a>
       </p>
