--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         for navigating today’s competitive startup environment. The study 
         also employed logistic regression to predict probabilities of success, 
         providing actionable insights that founders can use when seeking 
-        funding or making operational decisions.
+        funding or making operational decisions. It is has been accepted into and will be published by the Journal of Student Research this January.
       </p>
       <p>
         <strong>Paper Link:</strong>
